crates/nash-can/src/snapshots/nash_can__module__tests__recursive_let_value.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf =\n    let\n        x = x\n    in\n    x\n"
info: diagnostic
---
nash::names::recursive_let

  × Value `x` depends on itself.
   ╭─[src/Main.nash:5:9]
 4 │     let
 5 │         x = x
   ·         ─
 6 │     in
   ╰────
  help:

        Break the cycle between these value definitions.
