crates/nash-can/src/snapshots/nash_can__module__tests__scope_recovery_between_case_branches.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf outer =\n    case outer of\n        first -> missing\n        second -> first\n"
info: diagnostic
---
nash::names::not_found_var

  × Unknown variable `missing`.
   ╭─[src/Main.nash:5:18]
 4 │     case outer of
 5 │         first -> missing
   ·                  ───────
 6 │         second -> first
   ╰────
  help: Similar names:

            first
            f
            outer
            Builtin.bData

nash::names::not_found_var

  × Unknown variable `first`.
   ╭─[src/Main.nash:6:19]
 5 │         first -> missing
 6 │         second -> first
   ·                   ─────
   ╰────
  help: Similar names:

            f
            outer
            second
            Builtin.bData
