crates/nash-can/src/snapshots/nash_can__module__tests__scope_siblings_reuse_binding_names.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf outer =\n    case outer of\n        (first, value) -> value\n        (second, value) -> value\n"
---
Module {
    tests: [],
    traits: [],
    impls: [],
    kind: Normal,
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Everything(
        Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 7,
                column: 1,
            },
        },
    ),
    decls: Declare {
        definition: Def {
            name: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 1,
                    },
                    end: Position {
                        line: 3,
                        column: 2,
                    },
                },
                value: "f",
            },
            args: [
                Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 3,
                        },
                        end: Position {
                            line: 3,
                            column: 8,
                        },
                    },
                    value: Var(
                        "outer",
                    ),
                },
            ],
            body: Located {
                region: Region {
                    start: Position {
                        line: 4,
                        column: 5,
                    },
                    end: Position {
                        line: 7,
                        column: 1,
                    },
                },
                value: Case {
                    scrutinee: Located {
                        region: Region {
                            start: Position {
                                line: 4,
                                column: 10,
                            },
                            end: Position {
                                line: 4,
                                column: 15,
                            },
                        },
                        value: VarLocal(
                            "outer",
                        ),
                    },
                    branches: [
                        CaseBranch {
                            pattern: Located {
                                region: Region {
                                    start: Position {
                                        line: 5,
                                        column: 9,
                                    },
                                    end: Position {
                                        line: 5,
                                        column: 23,
                                    },
                                },
                                value: Tuple {
                                    first: Located {
                                        region: Region {
                                            start: Position {
                                                line: 5,
                                                column: 10,
                                            },
                                            end: Position {
                                                line: 5,
                                                column: 15,
                                            },
                                        },
                                        value: Var(
                                            "first",
                                        ),
                                    },
                                    second: Located {
                                        region: Region {
                                            start: Position {
                                                line: 5,
                                                column: 17,
                                            },
                                            end: Position {
                                                line: 5,
                                                column: 22,
                                            },
                                        },
                                        value: Var(
                                            "value",
                                        ),
                                    },
                                    rest: [],
                                },
                            },
                            body: Located {
                                region: Region {
                                    start: Position {
                                        line: 5,
                                        column: 27,
                                    },
                                    end: Position {
                                        line: 5,
                                        column: 32,
                                    },
                                },
                                value: VarLocal(
                                    "value",
                                ),
                            },
                        },
                        CaseBranch {
                            pattern: Located {
                                region: Region {
                                    start: Position {
                                        line: 6,
                                        column: 9,
                                    },
                                    end: Position {
                                        line: 6,
                                        column: 24,
                                    },
                                },
                                value: Tuple {
                                    first: Located {
                                        region: Region {
                                            start: Position {
                                                line: 6,
                                                column: 10,
                                            },
                                            end: Position {
                                                line: 6,
                                                column: 16,
                                            },
                                        },
                                        value: Var(
                                            "second",
                                        ),
                                    },
                                    second: Located {
                                        region: Region {
                                            start: Position {
                                                line: 6,
                                                column: 18,
                                            },
                                            end: Position {
                                                line: 6,
                                                column: 23,
                                            },
                                        },
                                        value: Var(
                                            "value",
                                        ),
                                    },
                                    rest: [],
                                },
                            },
                            body: Located {
                                region: Region {
                                    start: Position {
                                        line: 6,
                                        column: 28,
                                    },
                                    end: Position {
                                        line: 6,
                                        column: 33,
                                    },
                                },
                                value: VarLocal(
                                    "value",
                                ),
                            },
                        },
                    ],
                },
            },
        },
        next: Empty,
    },
    unions: [],
    aliases: [],
    binops: [],
}
