crates/nash-can/src/snapshots/nash_can__module__tests__self_recursive_function.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf x = f x\n"
---
Module {
    tests: [],
    traits: [],
    impls: [],
    kind: Normal,
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Everything(
        Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 4,
                column: 1,
            },
        },
    ),
    decls: DeclareRec {
        definition: Def {
            name: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 1,
                    },
                    end: Position {
                        line: 3,
                        column: 2,
                    },
                },
                value: "f",
            },
            args: [
                Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 3,
                        },
                        end: Position {
                            line: 3,
                            column: 4,
                        },
                    },
                    value: Var(
                        "x",
                    ),
                },
            ],
            body: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 7,
                    },
                    end: Position {
                        line: 3,
                        column: 10,
                    },
                },
                value: Call {
                    function: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 7,
                            },
                            end: Position {
                                line: 3,
                                column: 8,
                            },
                        },
                        value: VarTopLevel(
                            QualifiedName {
                                home: ModuleName {
                                    package: None,
                                    name: "Main",
                                },
                                name: "f",
                            },
                        ),
                    },
                    arguments: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 9,
                                },
                                end: Position {
                                    line: 3,
                                    column: 10,
                                },
                            },
                            value: VarLocal(
                                "x",
                            ),
                        },
                    ],
                },
            },
        },
        following: [],
        next: Empty,
    },
    unions: [],
    aliases: [],
    binops: [],
}
