crates/nash-can/src/snapshots/nash_can__module__tests__shadowing_local.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf x =\n    let\n        x = 1\n    in\n    x\n"
info: diagnostic
---
nash::names::shadowing

  × Name `x` is already defined.
   ╭─[src/Main.nash:5:9]
 2 │ 
 3 │ f x =
   ·   ┬
   ·   ╰── first defined here
 4 │     let
 5 │         x = 1
   ·         ┬
   ·         ╰── shadows this name
 6 │     in
   ╰────
  help: Rename one of these bindings.
