crates/nash-can/src/snapshots/nash_can__module__tests__tests_block_unsupported.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntests\n    test \"truth\" = do\n        assert True\n"
info: diagnostic
---
nash::names::unsupported

  × Unsupported feature: tests block.
   ╭─[src/Main.nash:4:5]
 3 │     tests
 4 │ ╭─▶     test "truth" = do
 5 │ ╰─▶         assert True
   ╰────
  help: This syntax is recognized, but its compiler implementation is not available yet.
