crates/nash-can/src/snapshots/nash_can__module__tests__to_public_alias_public_passes_through.snap
---
source: crates/nash-can/src/module.rs
---
Some(
    InterfaceAlias {
        kind: Arrow(
            Type,
            Arrow(
                Type,
                Type,
            ),
        ),
        context: [],
        name: "Pair",
        parameters: [
            "a",
            "b",
        ],
        typ: Located {
            region: Region {
                start: Position {
                    line: 0,
                    column: 0,
                },
                end: Position {
                    line: 0,
                    column: 0,
                },
            },
            value: Named {
                reference: QualifiedName {
                    home: ModuleName {
                        package: Some(
                            PackageName {
                                author: "nash",
                                project: "base",
                            },
                        ),
                        name: "Primitive",
                    },
                    name: "unit",
                },
                args: [],
            },
        },
        visibility: Public,
    },
)
